--- a/mirean-bot/package.json
+++ b/mirean-bot/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "discord.js": "13.5.0",
+    "dotenv": "^16.0.1",
     "rest": "^2.0.0"
   },
   "devDependencies": {
