Commit to prevent bot from getting hacked

--- a/mirean-bot/.env
+++ b/mirean-bot/.env
@@ -1,1 +1,1 @@
-BOT_TOKEN='MTAwOTg0MTk2MDM0Njk5MjcyMQ.GzN_Rb.jmq26EEOeURstV9Xbd6kKQYz5fBFs9Am8ADwrs'
+BOT_TOKEN="MTAwOTg0MTk2MDM0Njk5MjcyMQ.GzbRIl.-TTUOwOqD29Oh_spx8iFrgagps8BFFeAYXqXto"
