--- a/mirean-bot/package.json
+++ b/mirean-bot/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "discord.js": "13.5.0",
     "dotenv": "^16.0.1",
-    "rest": "^2.0.0"
+    "mysql2": "^2.3.3",
+    "reflect-metadata": "^0.1.13",
+    "rest": "^2.0.0",
+    "typeorm": "^0.3.7"
   },
   "devDependencies": {
     "@types/node": "17.0.5",
