--- a/mirean-bot/.env
+++ b/mirean-bot/.env
@@ -1,1 +1,1 @@
-BOT_TOKEN="MTAwOTg0MTk2MDM0Njk5MjcyMQ.GMNy49.yNJsBjuH-I1Ca_tqny25ORPUfh2ny2qnptCPiU"
+BOT_TOKEN="MTAwOTg0MTk2MDM0Njk5MjcyMQ.GYHnpd.fMWxZvfJZIEze8IthnYYqt4hA_FqWaWLc_4egw"
